<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/blood_pressure_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:foreground="?attr/selectableItemBackground"
    android:transitionName="@string/blood_pressure_card_transition_name"
    app:cardBackgroundColor="@color/background800"
    app:cardCornerRadius="14dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/upper_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/upper_value"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toStartOf="@+id/slash"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/slash_text"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toStartOf="@+id/down_value"
            app:layout_constraintStart_toEndOf="@+id/upper_value"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/down_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lower_value"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/slash"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/heart_rate_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/heart_rate"
            android:src="@drawable/ic_baseline_heart_24_small"
            app:layout_constraintEnd_toStartOf="@+id/heart_rate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upper_value" />

        <TextView
            android:id="@+id/heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/heart_rate"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@id/heart_rate_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/heart_rate_image"
            app:layout_constraintTop_toTopOf="@id/heart_rate_image" />

        <TextView
            android:id="@+id/data_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date_time"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintTop_toBottomOf="@id/heart_rate_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>