<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.detail.MeasureDetailFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/measure_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="@string/measure_detail_transition_name">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/upper_value_detail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:hint="@string/upper_value"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="@string/upper_value"
                app:startIconDrawable="@drawable/ic_baseline_bar_chart_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/upper_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:selectAllOnFocus="true"
                    android:textColorHint="#78909C"
                    android:textSize="26sp"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/down_value_detail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:hint="@string/lower_value"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upper_value_detail"
                app:startIconContentDescription="@string/lower_value"
                app:startIconDrawable="@drawable/ic_baseline_bar_chart_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/down_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:selectAllOnFocus="true"
                    android:textColorHint="#78909C"
                    android:textSize="26sp"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/heart_rate_detail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:hint="@string/heart_rate"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/down_value_detail"
                app:startIconContentDescription="@string/heart_rate"
                app:startIconDrawable="@drawable/ic_baseline_heart_24_small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heart_rate_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:selectAllOnFocus="true"
                    android:textColorHint="#78909C"
                    android:textSize="26sp"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</FrameLayout>